--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "port": 9222,
             "request": "attach",
             "type": "pwa-chrome",
-            "webRoot": "executar"
+            "webRoot": "${workspaceFolder}"
         },
         {
             "type": "pwa-chrome",
