--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "HTM-5",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next dev"
@@ -18,8 +17,9 @@
   },
   "homepage": "https://github.com/Danielstarks/HTM-5#readme",
   "dependencies": {
-    "next": "^11.0.1",
+    "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "description": ""
 }
