--- a/pages/pages/package.json
+++ b/pages/pages/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "three.js",
   "scripts": {
-    "dev": "next dev"
+    "dan": "next dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
