--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "HTML-5",
   "version": "1.0.0",
+  "description":"",
   "main": "index.js",
   "scripts": {
     "dev": "next dev"
@@ -20,6 +21,6 @@
     "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  },
-  "description": ""
+  }
+
 }
