--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Danielstarks/HTM-5#readme",
   "dependencies": {
     "netx": "^0.0.1",
+    "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
 }
+
